Fix extra space on right for mobile portrait mode

--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,18 @@
 html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}img,embed,object,audio,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0;text-align:left}
+
+html, body { 
+  width: 100%;  
+  overflow-x: hidden; 
+}
 body {
   font-family: 'Montserrat', sans-serif;
   height: 100vh;
-  width: 100%;
   background-image: radial-gradient(circle 100rem, white, #ffe899);
 }
 a {
   text-decoration: none;
   color: black;
 }
-
 .boxed {
   padding: 10px 15px;
   max-width: 90%;
